Fixed index contrast issues Fixed index : missing animation while no town

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -697,7 +697,7 @@ input[type=range]::-webkit-slider-runnable-track {
   pointer-events: all;
   position: absolute;
   z-index: 100;
-  bottom: 5%;
+  bottom: 2.5%;
   width: 80%;
   left: 10%;
   text-align: center;
@@ -708,6 +708,8 @@ input[type=range]::-webkit-slider-runnable-track {
 .container__action .log_error p {
   margin-bottom: 0px;
   color: #C72C1C;
+  font-weight: bold;
+  text-shadow: 2px 2px 1px #ffffff, -2px -2px 1px #ffffff, -2px 2px 1px #ffffff, 2px -2px 1px #ffffff;
 }
 .container__action .login__name, .container__action .login__pwd, .container__action .register__name,
 .container__action .register__mail, .container__action .register__town, .container__action .register__password1,
@@ -742,6 +744,9 @@ input[type=range]::-webkit-slider-runnable-track {
   position: relative;
   margin: 32px 0px;
 }
+.input__container:first-child {
+  margin-top: 16px;
+}
 .input__container .icon__friend {
   font-size: 32px;
   color: #0067B0;
@@ -767,7 +772,6 @@ input[type=range]::-webkit-slider-runnable-track {
   color: white;
   font-size: 16px;
   text-align: center;
-  margin-bottom: 16px;
 }
 
 .dotting {
@@ -776,7 +780,7 @@ input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
   height: 100%;
   z-index: 50;
-  background: linear-gradient(45deg, transparent, transparent 50%, #00000050, #00000050);
+  background: linear-gradient(45deg, black, #00000012 50%, #0000004f, #00000066);
   background-size: 2px 2px;
 }
 
