--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -53,7 +53,7 @@
   pointer-events: all;
   position: absolute;
   z-index: 100;
-  bottom: 5%;
+  bottom: 2.5%;
   width: 80%;
   left : 10%;
   text-align: center;
@@ -65,6 +65,8 @@
   .log_error p{
     margin-bottom: 0px;
     color: #C72C1C;
+    font-weight: bold;
+    text-shadow: 2px 2px 1px #ffffff, -2px -2px 1px #ffffff, -2px 2px 1px #ffffff, 2px -2px 1px #ffffff;
   }
 
   .login__name, .login__pwd, .register__name,
@@ -104,6 +106,10 @@
   position: relative;
   margin: 32px 0px;
 
+  &:first-child{
+    margin-top: 16px;
+  }
+
   .icon__friend{
     font-size: 32px;
     color: #0067B0;
@@ -134,7 +140,6 @@
   color: white;
   font-size: 16px;
   text-align: center;
-  margin-bottom: 16px;
 }
 
 .dotting{
@@ -143,7 +148,7 @@
   width: 100%;
   height: 100%;
   z-index: 50;
-  background: linear-gradient( 45deg, transparent, transparent 50%, #00000050, #00000050 );
+  background: linear-gradient(45deg, black, #00000012 50%, #0000004f, #00000066);
   background-size: 2px 2px;
 }
 
